Fixed overflow and forms

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,7 +4,7 @@ body {
 }
 
 .body-wrap {
-  overflow: hidden;
+  /* overflow: hidden; */
   position: relative;
   -webkit-font-smoothing: antialiased;
 }
